--- a/base-post-entity/pom.xml
+++ b/base-post-entity/pom.xml
@@ -14,6 +14,9 @@
     <url>https://github.com/ewcmsfree/rmyy/base-entity</url>
     
     <properties>
+    	<support.basedir>${project.parent.parent.basedir}/src/support</support.basedir>
+        <site.basedir>${project.parent.parent.basedir}</site.basedir>
+    
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <common.version>1.0.0</common.version>
     </properties>
