--- a/hzda-web/src/main/resources/resources.properties
+++ b/hzda-web/src/main/resources/resources.properties
@@ -97,3 +97,11 @@ full.path.separator.mark = &nbsp;&gt;&gt;&nbsp;
 
 #微信TOKEN
 DNBX_TOKEN = 
+
+#SMS短信服务
+domain=dysmsapi.aliyuncs.com
+RegionId=cn-hangzhou
+accessKeyId=LTAIBSCtyx5r5Nva
+accessKeySecret=bRdNX54BQMKXTSoD4QMsfJXGpdw81v
+signName=gzss
+templateCode=SMS_43155245
