--- a/yjk-web/pom.xml
+++ b/yjk-web/pom.xml
@@ -15,6 +15,9 @@
 	<packaging>war</packaging>
 	<url>https://github.com/ewcmsfree/rmyy/yjk-web</url>
 	<properties>
+		<support.basedir>${project.parent.parent.basedir}/src/support</support.basedir>
+        <site.basedir>${project.parent.parent.basedir}</site.basedir>
+	
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<empi.version>1.0.0</empi.version>
 		<yuicompressor.version>2.4.2</yuicompressor.version>
